Factor out Windows utility function get_system_dir().
The code to find out the location of the c:\windows\system32 directory
was already present, in load_system32_dll(). Now it's moved out into a
function of its own, so it can be called in other contexts.

--- a/windows/CMakeLists.txt
+++ b/windows/CMakeLists.txt
@@ -10,6 +10,7 @@ add_sources_from_current_dir(utils
   utils/filename.c
   utils/fontspec.c
   utils/getdlgitemtext_alloc.c
+  utils/get_system_dir.c
   utils/get_username.c
   utils/is_console_handle.c
   utils/load_system32_dll.c
