Move some parts of window.c into putty.c.
This prepares the ground for a second essentially similarly-shaped
program reusing most of window.c but handling its command line and
startup differently. A couple of large parts of WinMain() to do with
backend selection and command-line handling are now subfunctions in a
separate file putty.c.

Also, our custom AppUserModelId is defined in that file, so that it
can vary with the client application.

--- a/windows/CMakeLists.txt
+++ b/windows/CMakeLists.txt
@@ -82,6 +82,7 @@ add_sources_from_current_dir(psocks nohelp.c)
 
 add_executable(putty
   window.c
+  putty.c
   help.c
   ${CMAKE_SOURCE_DIR}/be_all_s.c
   putty.rc)
@@ -97,6 +98,7 @@ installed_program(putty)
 
 add_executable(puttytel
   window.c
+  putty.c
   help.c
   ${CMAKE_SOURCE_DIR}/be_nos_s.c
   ${CMAKE_SOURCE_DIR}/nogss.c
