Move icon declarations out of putty-common.rc2.
Now they're done by putty.rc and puttytel.rc, before including
putty-common.rc2. So another user of putty-common.rc2 can disagree on
what icons to use.

--- a/windows/puttytel.rc
+++ b/windows/puttytel.rc
@@ -1,7 +1,11 @@
 #include "rcstuff.h"
+#include "putty-rc.h"
 
 #define APPNAME "PuTTYtel"
 #define APPDESC "Telnet and Rlogin client"
+
+IDI_MAINICON ICON "putty.ico"
+IDI_CFGICON ICON "puttycfg.ico"
 
 #include "help.rc2"
 #include "putty-common.rc2"
