--- a/windows/putty.rc
+++ b/windows/putty.rc
@@ -1,7 +1,11 @@
 #include "rcstuff.h"
+#include "putty-rc.h"
 
 #define APPNAME "PuTTY"
 #define APPDESC "SSH, Telnet, Rlogin, and SUPDUP client"
+
+IDI_MAINICON ICON "putty.ico"
+IDI_CFGICON ICON "puttycfg.ico"
 
 #include "help.rc2"
 #include "putty-common.rc2"
