New application: a Windows version of 'pterm'!
This fulfills our long-standing Mayhem-difficulty wishlist item
'win-command-prompt': this is a Windows pterm in the sense that when
you run it you get a local cmd.exe running inside a PuTTY-style window.

Advantages of this: you get the same free choice of fonts as PuTTY has
(no restriction to a strange subset of the system's available fonts);
you get the same copy-paste gestures as PuTTY (no mental gear-shifting
when you have command prompts and SSH sessions open on the same
desktop); you get scrollback with the PuTTY semantics (scrolling to
the bottom gets you to where the action is, as opposed to the way you
could accidentally find yourself 500 lines past the end of the action
in a real console).

'win-command-prompt' was at Mayhem difficulty ('Probably impossible')
basically on the grounds that with Windows's old APIs for accessing
the contents of consoles, there was no way I could find to get this to
work sensibly. What was needed to make it feasible was a major piece
of re-engineering work inside Windows itself.

But, of course, that's exactly what happened! In 2019, the new ConPTY
API arrived, which lets you create an object that behaves like a
Windows console at one end, and round the back, emits a stream of
VT-style escape sequences as the screen contents evolve, and accepts a
VT-style input stream in return which it will parse function and arrow
keys out of in the usual way.

So now it's actually _easy_ to get this to basically work. The new
backend, in conpty.c, has to do a handful of magic Windows API calls
to set up the pseudo-console and its feeder pipes and start a
subprocess running in it, a further magic call every time the PuTTY
window is resized, and detect the end of the session by watching for
the subprocess terminating. But apart from that, all it has to do is
pass data back and forth unmodified between those pipes and the
backend's associated Seat!

That said, this is new and experimental, and th

--- a/windows/CMakeLists.txt
+++ b/windows/CMakeLists.txt
@@ -134,6 +134,28 @@ set_target_properties(puttygen PROPERTIES
   LINK_FLAGS "${LFLAG_MANIFEST_NO}")
 installed_program(puttygen)
 
+if(HAVE_CONPTY)
+  add_executable(pterm
+    window.c
+    pterm.c
+    help.c
+    conpty.c
+    be_conpty.c
+    ${CMAKE_SOURCE_DIR}/nogss.c
+    ${CMAKE_SOURCE_DIR}/norand.c
+    pterm.rc)
+  add_dependencies(pterm generated_licence_h)
+  target_link_libraries(pterm
+    guiterminal guimisc eventloop settings network utils
+    ${platform_libraries})
+  set_target_properties(pterm PROPERTIES
+    WIN32_EXECUTABLE ON
+    LINK_FLAGS "${LFLAG_MANIFEST_NO}")
+  installed_program(pterm)
+else()
+  message("ConPTY not available; cannot build Windows pterm")
+endif()
+
 add_executable(test_split_into_argv
   utils/split_into_argv.c)
 target_compile_definitions(test_split_into_argv PRIVATE TEST)
