Don't #include <utmp.h> if it doesn't exist.
A FreeBSD user reports that it doesn't exist there.

--- a/cmake/cmake.h.in
+++ b/cmake/cmake.h.in
@@ -21,6 +21,7 @@
 #cmakedefine01 HAVE_SYS_SYSCTL_H
 #cmakedefine01 HAVE_SYS_TYPES_H
 #cmakedefine01 HAVE_GLOB_H
+#cmakedefine01 HAVE_UTMP_H
 #cmakedefine01 HAVE_FUTIMES
 #cmakedefine01 HAVE_GETADDRINFO
 #cmakedefine01 HAVE_POSIX_OPENPT
