--- a/windows/CMakeLists.txt
+++ b/windows/CMakeLists.txt
@@ -104,6 +104,7 @@ add_executable(puttytel
   ${CMAKE_SOURCE_DIR}/nogss.c
   ${CMAKE_SOURCE_DIR}/norand.c
   ${CMAKE_SOURCE_DIR}/nocproxy.c
+  ${CMAKE_SOURCE_DIR}/nosshproxy.c
   puttytel.rc)
 add_dependencies(puttytel generated_licence_h)
 target_link_libraries(puttytel
@@ -143,6 +144,7 @@ if(HAVE_CONPTY)
     be_conpty.c
     ${CMAKE_SOURCE_DIR}/nogss.c
     ${CMAKE_SOURCE_DIR}/norand.c
+    ${CMAKE_SOURCE_DIR}/nosshproxy.c
     pterm.rc)
   add_dependencies(pterm generated_licence_h)
   target_link_libraries(pterm
