--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,6 +82,10 @@ add_executable(test_wildcard
 target_compile_definitions(test_wildcard PRIVATE TEST)
 target_link_libraries(test_wildcard utils ${platform_libraries})
 
+add_executable(bidi_gettype
+  terminal/bidi_gettype.c)
+target_link_libraries(bidi_gettype guiterminal utils ${platform_libraries})
+
 add_executable(plink
   ${platform}/plink.c
   be_all_s.c)
